Agrega dependencias para producción.

--- a/index.html
+++ b/index.html
@@ -19,3 +19,6 @@
     <script src="./renderer.js"></script>
   </body>
 </html>
+
+<!-- Para más info de electron: -->
+<!-- https://github.com/electron/electron -->
